--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -7,7 +7,7 @@ base="dark"
 primaryColor="#f63366"
 
 # Background color for the main content area.
-backgroundColor="#99a8bf"
+backgroundColor="#192538"
 
 # Background color used for the sidebar and most interactive widgets.
 secondaryBackgroundColor="#181818"
